static/scss/_layout.scss
// Site-wide header styles
// ...


// Site-wide layout elements

.give-section-white {
  background-color: #fff;
  font-family: $font-family-serif;

  &,
  & p,
  & ol,
  & ul {
    color: #000;
  }
}

.give-section-heading {
  @include narrow-text();
  margin: 0 0 .5em;
}


// Site-wide footer styles

.site-footer {
  background-color: #000;

  &,
  & p,
  & ol,
  & ul,
  & a {
    color: #fff;
  }
}


// Footer profile list styles

.profile-list {
  position: relative;
  z-index: 1;
}

.profile-list-item {
  position: relative;

  &:before {
    content: '';
    display: block;
    padding-top: 100%;
  }

  &.profile-item-lead {
    background-color: $ucf-gold;

    .profile-item-content {
      color: #000;
      padding: 10% 25% 10% 10%;
      text-align: left;

      @media (max-width: $screen-sm-max) {
        padding: 10%;
      }
    }
  }
}

.profile-img {
  @include transition(opacity .3s ease-in-out);
  background-size: cover;
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;

  &.profile-img-bw {
    opacity: 1;
    z-index: 1;

    .profile-list-item:hover &,
    .profile-list-item:focus & {
      opacity: 0;
    }
  }

  &.profile-img-c {
    opacity: 0;
    z-index: 2;

    .profile-list-item:hover &,
    .profile-list-item:focus & {
      opacity: 1;
    }
  }
}

.profile-item-inner {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.profile-item-content {
  color: #fff;
  height: 100%;
  position: relative;
  width: 100%;
  z-index: 3;
}

.profile-list-title {
  @include narrow-text();
  font-size: 50px; // fallback for non-vw support
  font-size: 5vw;
  margin-top: 0;

  @media (min-width: $screen-lg-min) {
    font-size: 50px;
    font-size: 4vw;
  }

  @media (max-width: $screen-sm-max) {
    font-size: 36px;
    font-size: 5vw;
  }

  @media (max-width: $screen-xs-max) {
    font-size: 23px;
    font-size: 7vw;
  }
}

.profile-list-description {
  font-size: 18px;
  font-size: 1.8vw;
  line-height: 1.25;
  margin-top: 20px;

  @media (min-width: $screen-lg-min) {
    font-size: 18px;
    font-size: 1.4vw;
  }

  @media (max-width: $screen-sm-max) {
    font-size: 16px;
    font-size: 2vw;
    margin-top: 15px;
  }

  @media (max-width: $screen-xs-max) {
    font-size: 12.5px;
    font-size: 3.5vw;
    margin-top: 10px;
  }
}

.profile-item-title {
  margin: 0;
}

.profile-item-name {
  display: block;
  font-family: $font-family-serif;
  font-size: 18px;
  font-size: 1.6vw;
  font-style: italic;
  font-weight: normal;
  margin: 0;
  max-width: 85%;
  position: absolute;
  right: 5%;
  top: 6%;

  @media (min-width: $screen-lg-min) {
    font-size: 18px;
    font-size: 1.5vw;
  }

  @media (max-width: $screen-sm-max) {
    font-size: 16px;
    font-size: 1.9vw;
  }

  @media (max-width: $screen-xs-max) {
    font-size: 14px;
    font-size: 3.75vw;
  }
}

.profile-item-subtitle {
  @include narrow-text();
  @include transition(color .3s ease-in-out);
  bottom: 0;
  display: block;
  font-size: 36px;
  font-size: 3.4vw;
  left: 0;
  padding: 12%;
  position: absolute;
  right: 0;
  width: 100%;

  @media (max-width: $screen-sm-max) {
    font-size: 30px;
    font-size: 4vw;
  }

  @media (max-width: $screen-xs-max) {
    font-size: 22px;
    font-size: 6vw;
  }

  &:empty {
    display: none;
  }

  .profile-list-item:hover &,
  .profile-list-item:focus & {
    color: $ucf-gold;
  }
}


// Bottom footer contents

.footer-column-wrap {
  display: table;
  margin-top: -15px; // push up into .profile-list
  position: relative;
  width: 100%;
  z-index: 2;

  @media (max-width: $screen-sm-max) {
    display: block;
    margin-top: 35px;
  }

  @media (max-width: $screen-xs-max) {
    margin-top: 0;
  }
}

.footer-address-custom-wrap,
.footer-give-column-wrap {
  display: table-cell;
}

.footer-address-custom-wrap {
  padding-bottom: 65px;
  padding-left: 40px;
  padding-top: 65px; // push back down from .profile-list, with extra pad
  vertical-align: top;
  width: 62%;

  @media (min-width: $screen-lg-min) {
    padding-left: 20px;
  }

  @media (max-width: $screen-sm-max) {
    display: table;
    padding-left: 0;
    width: 100%;
  }

  @media (max-width: $screen-xs-max) {
    display: block;
    padding: 30px $grid-gutter-width / 2; // re-add l/r padding removed from parent .col-
  }
}

.footer-give-column-wrap {
  background-color: #fff; // "bleed" this column to the very bottom of the page
  vertical-align: top;
  width: 38%;

  @media (max-width: $screen-sm-max) {
    display: block;
    width: 100%;
  }
}

.footer-section {
  font-size: 13px;
  line-height: 1.8;
  padding: 0 30px;
  vertical-align: top;

  @media (min-width: $screen-lg-min) {
    font-size: 14px;
    padding: 0 45px;
  }

  @media (max-width: $screen-sm-min) {
    padding: 0 40px;
  }

  @media (max-width: $screen-xs-max) {
    padding: 0 15px;
  }

  &.give-section-white {
    margin-top: -10px;
    padding: 40px;

    @media (max-width: $screen-sm-max) {
      display: block;
      padding: 40px;
    }

    @media (max-width: $screen-xs-max) {
      margin-top: 0;
      padding: 30px;
    }

    &,
    p,
    ol,
    ul,
    a {
      color: #000;
    }

    .give-section-heading {
      font-size: 52px;

      @media (min-width: $screen-lg-min) {
        font-size: 60px;
      }
    }

    p {
      font-size: 20px;
      line-height: 1.3;

      @media (min-width: $screen-lg-min) {
        font-size: 22px;
      }
    }

    .btn {
      margin-top: 1.2em;
    }
  }

  &.footer-address,
  &.footer-customcol {
    box-sizing: border-box;
    display: table-cell;
    width: 50%;

    @media (max-width: $screen-sm-max) {
      padding: 0 40px; // match .give-section-white padding l/r
    }

    @media (max-width: $screen-xs-max) {
      display: block;
      width: auto;
    }
  }

  &.footer-address {
    @include sans-serif-text();
    padding-left: 0; // allow enough room for each address line to not overflow
    text-transform: uppercase;

    @media (min-width: $screen-lg-min) {
      padding-left: 40px;
    }

    @media (max-width: $screen-sm-max) {
      padding-left: 40px; // match .give-section-white padding l/r
    }

    @media (max-width: $screen-xs-max) {
      // match .give-section-white padding l/r, but use margins
      margin-left: 15px;
      margin-right: 15px;
      padding: 0 0 30px;
    }

    address {
      line-height: inherit;
    }

    .social-links {
      margin-bottom: 0;
      margin-top: 20px;
    }
  }

  &.footer-customcol {
    border-left: 2px solid #fff;
    padding-right: 0;

    @media (max-width: $screen-sm-max) {
      padding-right: 40px; // match .give-section-white padding l/r
    }

    @media (max-width: $screen-xs-max) {
      border-left: 0 solid transparent;
      border-top: 2px solid #fff;
      // match .give-section-white padding l/r, but use margins
      margin-left: 15px;
      margin-right: 15px;
      padding: 30px 0;
    }

    .ucf-logo-white {
      margin-top: 20px;
    }
  }
}

.footer-section-heading {
  font-size: 24px;
  margin-bottom: 1.1em;
  margin-top: 0;
  text-transform: uppercase;

  @media (min-width: $screen-lg-min) {
    font-size: 26px;
  }
}

